# Process this file with autoconf to produce a configure script.
AC_INIT(xether, v1.1b, "http://www.enteract.com/~alam20")
AC_CONFIG_SRCDIR([src/xlayer.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([ stdint.h sys/inttypes.h arpa/inet.h netinet/in.h stdlib.h string.h sys/param.h sys/socket.h sys/sockio.h unistd.h sys/ioctl.h net/if_dl.h ])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([sysctl inet_ntoa memset socket])

AC_CONFIG_FILES([makefile])
AC_OUTPUT
